# limingwolf

Project_public/MeachineVision/1_图像窗口和Roi/: ReadMe.md
Project_public/MeachineVision/1_图像窗口和Roi/1.library/include/: IRoi.h  QImageWidgetInterface.h  RoiParameter.h
Project_public/MeachineVision/1_图像窗口和Roi/1.library/x64/Debug/: RoiImageWidget.exp  RoiImageWidget.ilk
Project_public/MeachineVision/1_图像窗口和Roi/1.library/x64/Release/: RoiImageWidget.exp  RoiImageWidget.lib
Project_public/MeachineVision/1_图像窗口和Roi/2.samples/0_vscode_msvc_cmake项目/: CMakeLists.txt  readme.md
Project_public/MeachineVision/1_图像窗口和Roi/2.samples/0_vscode_msvc_cmake项目/include/: MyLibrary.h
Project_public/MeachineVision/1_图像窗口和Roi/2.samples/0_vscode_msvc_cmake项目/src/: MyLibrary.cpp  main.cpp
Project_public/MeachineVision/1_图像窗口和Roi/2.samples/1_使用窗口与Roi/Project/: CMakeLists.txt
Project_public/MeachineVision/1_图像窗口和Roi/2.samples/1_使用窗口与Roi/Project/UseImageWidget/: CMakeLists.txt  main.cpp
